--- a/Frontend_User/src/assets/main.css
+++ b/Frontend_User/src/assets/main.css
@@ -1,9 +1,28 @@
+
 @import './base.css';
 
+/* Ensure Font Awesome icons display correctly */
+i[class^="fa-"],
+i[class*=" fa-"] {
+  display: inline-block;
+  font-style: normal;
+  font-variant: normal;
+  text-rendering: auto;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  line-height: 1;
+  vertical-align: -0.125em;
+}
+
+.fa-solid,
+.fa-regular,
+.fas,
+.far {
+  font-family: 'Font Awesome 6 Free';
+  font-weight: 900;
+}
+
 #app {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
   font-weight: normal;
 }
 
@@ -18,18 +37,5 @@ a,
 @media (hover: hover) {
   a:hover {
     background-color: hsla(160, 100%, 37%, 0.2);
-  }
-}
-
-@media (min-width: 1024px) {
-  body {
-    display: flex;
-    place-items: center;
-  }
-
-  #app {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    padding: 0 2rem;
   }
 }
